WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302777
[blocks-in-inline] Fix local previous/nextLinePosition to adjust for local offset
https://bugs.webkit.org/show_bug.cgi?id=302777
Summary
[blocks-in-inline] Fix local previous/nextLinePosition to adjust for local of...
Antti Koivisto
Reported
2025-11-19 05:07:34 PST
The point argument for visiblePositionForPoint is in a wrong coordinate space.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-11-19 05:08:19 PST
<
rdar://problem/165041221
>
Antti Koivisto
Comment 2
2025-11-19 05:10:32 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54174
EWS
Comment 3
2025-11-19 07:23:08 PST
Committed
303253@main
(66fe01ec84ac): <
https://commits.webkit.org/303253@main
> Reviewed commits have been landed. Closing PR #54174 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug